# gio_skyrim_stock_game

./: .gitignore  .markdownlint.json  404.html  Gio Scratch (Stock Game).compiler_settings  Gio's Skyrim.compiler_settings  Makefile  ModOrganizer.ini  README.md  _sidebar.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
credits/: index.html
developers/address_library/: index.html
developers/bethini_pie/: index.html
developers/creation_club/: index.html
developers/creation_kit/: index.html
developers/engine_fixes/: index.html
developers/game_root/: index.html
developers/general_notes/: index.html
developers/git_configuration/: index.html
developers/mo2_install/: index.html
developers/mo2_portable_setup/: index.html
developers/mods_optional_quick_start/: index.html
developers/skse64/: index.html
developers/skyrim_version/: index.html
developers/unmanaged_files/: index.html
developers/wabbajack_setup/: index.html
developers/webp/: index.html
developers/xedit/: index.html
docs/: .nav.yml  README.md  _sidebar.md  address_library.md  creation_club.md  creation_kit.md  credits.md  docsify.md  engine_fixes.md  game_root.md  git_configuration.md  journal.md  mo2_portable_setup.md  mods_optional_quick_start.md  references.md  skse64.md  skyrim_version.md  users.md  wabbajack_setup.md  webp.md
docs/developers/: .nav.yml  (+23 more)
mo2/: .gitignore  Gio's Skyrim.compiler_settings  ModOrganizer.ini
mods/: creation_kit.xx
references/: index.html
rejected/: index.html
search/: search_index.json
stylesheets/: extra.css
tags/: index.html
(+758 files in other folders)
