[project]
name = "gioskyrim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-custom-yaml-fences",
    "mkdocs-material>=9.6.16",
    "pymdown-extensions>=10.15",
]

[tool.uv.sources]
mkdocs-custom-yaml-fences = { git = "https://gitlab.com/iborco-software/python/mkdocs_custom_yaml_fences.git" }
